Change to support Folia

--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,8 @@
     <dependencies>
         <!-- Spigot dependency -->
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+            <groupId>dev.folia</groupId>
+            <artifactId>folia-api</artifactId>
             <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
