--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}
 api-version: "1.13"
 author: SBDeveloper
 softdepend: ["Vault", "WorldEdit"]
+folia-supported: true
 commands:
   v10lift:
     description: The V10Lift Command
